appId: org.reactjs.native.example.ReactNativeLegalBareExample
name: '[iOS] Check React Native entry in OSS libraries list'
tags:
  - pull-request
  - ios
---
- launchApp:
    clearState: true
    stopApp: true
- startRecording: 'e2e_results/checkLicenses'
- extendedWaitUntil:
    visible: 'Tap to see list of OSS libraries'
    timeout: 30000
- tapOn: 'Tap to see list of OSS libraries'
- assertVisible: 'OSS Notice'
- swipe:
    start: 50%, 70%
    end: 50%, 30%
    duration: 1000
- scrollUntilVisible:
    label: Scroll to React Native library
    element: '@react-native/virtualized-lists \(.*\)'
    direction: 'DOWN'
    timeout: 60000
    speed: 60
    visibilityPercentage: 75
- takeScreenshot: 'e2e_results/react-native_list_element'
- assertVisible: '@react-native/virtualized-lists (.*)'
- tapOn: '@react-native/virtualized-lists (.*)'
- takeScreenshot: 'e2e_results/react-native_entry'
- assertVisible: '@react-native/virtualized-lists (.*)'
- assertVisible: 'MIT'
- assertVisible: 'OSS Notice'
- tapOn: 'OSS Notice'
- takeScreenshot: 'e2e_results/react-native_back_to_list'
- stopRecording
- killApp
